--- a/app/src/main/res/layout/item_tree_prefix.xml
+++ b/app/src/main/res/layout/item_tree_prefix.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -15,7 +16,7 @@
             type="boolean" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout"
         android:onClick="@{() -> treeHolder.node.children.empty ? void : treeHolder.treeView.toggleNode(treeHolder.node)}"
         android:layout_width="wrap_content"
@@ -29,14 +30,20 @@
             android:layout_marginStart="@dimen/_4sdp"
             android:alpha="0.8"
             android:visibility="@{treeHolder.node.children.empty ? View.INVISIBLE : View.VISIBLE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@drawable/icon_triangle_right" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iconFolder"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iconArrow"
+            app:layout_constraintTop_toTopOf="parent"
             folderActive="@{active}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0.8"
             tools:srcCompat="@drawable/icon_folder" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
