--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -1,49 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <import type="com.leebeebeom.closetnote.ui.dialog.tree.holder.BaseTreeHolder" />
+
         <variable
             name="folderHolder"
             type="com.leebeebeom.closetnote.ui.dialog.tree.holder.TreeFolderHolder" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        marginStart="@{folderHolder.margin}"
+        android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_marginStart="@{folderHolder.margin}"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <include
+            android:id="@+id/prefix"
+            layout="@layout/item_tree_prefix"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_4sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:treeHolder="@{(BaseTreeHolder) folderHolder}" />
 
-            <include
-                android:id="@+id/prefix"
-                layout="@layout/item_tree_prefix"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="@dimen/_4sdp"
-                app:treeHolder="@{(BaseTreeHolder) folderHolder}" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv"
+            style="@style/myTreeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{folderHolder.tuple.name}"
+            android:textSize="@dimen/_10sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/prefix"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Short Sleeve" />
 
-            <include
-                android:id="@+id/tv"
-                layout="@layout/item_tree_text_view"
-                app:textSize="@{@dimen/_10sdp}"
-                app:name="@{folderHolder.tuple.name}" />
-
-            <include
-                android:id="@+id/postfix"
-                layout="@layout/item_tree_postfix"
-                app:contentSize="@{folderHolder.tuple.contentSize}"
-                app:treeHolder="@{(BaseTreeHolder) folderHolder}" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        <include
+            android:id="@+id/postfix"
+            layout="@layout/item_tree_postfix"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:contentSize="@{folderHolder.tuple.contentSize}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:treeHolder="@{(BaseTreeHolder) folderHolder}" />
 
         <View
             android:layout_width="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="1px"
             android:background="@android:color/transparent" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
